--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -37,7 +37,9 @@
                     <ul class="list-group" id="filters">
                       <li class="filter list-group-item">
                         <label for="date">Enter a Date</label>
-                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2011">
+                        <input class="form-control" id="datetime" type="text" placeholder="1/11/2010">
+                        <label for="city">Enter a City</label>
+                        <input class="form-control" id="city" type="text" placeholder="san francisco">
                       </li>
                     </ul>
                   </div>
